--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita animi molestiae eligendi assumenda cupiditate odio iste, consequuntur neque odit ut omnis hic doloribus? Culpa maiores non, temporibus tempora suscipit fugit.</h1>
+    <p>Hello World</p>
 </body>
 </html>
